modified style section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <button class="button">Find out more</button>
     </div>
     <footer>Coded by Gloria 🤞 using HTML CSS JS</footer>
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
